--- a/build.gradle
+++ b/build.gradle
@@ -44,4 +44,15 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core
     compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+
+//    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+//    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.1'
+//
+//    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+//    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+
 }
